--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@tunebond/form-code",
+  "name": "@tunebond/tone-code",
   "type": "module",
-  "version": "0.1.1",
+  "version": "0.1.0",
   "license": "MIT",
   "main": "./host/index.js",
   "files": [
