--- a/package.json
+++ b/package.json
@@ -1,17 +1,19 @@
 {
   "name": "@tunebond/tone-code",
   "type": "module",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "license": "MIT",
   "main": "./host/index.js",
   "files": [
     "./host/index.js",
-    "./host/index.d.ts"
+    "./host/index.d.ts",
+    "./dependencies.d.ts"
   ],
   "scripts": {
     "make": "tsc && tsc-alias",
     "scan": "concurrently --kill-others \"tsc -w\" \"tsc-alias -w\"",
-    "test": "npx ts-node-esm test.ts"
+    "test": "npx ts-node-esm test.ts",
+    "host": "pnpm make && npm publish --access=public"
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.0.0",
