--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,10 +16,7 @@
     "types": ["node"],
     "typeRoots": ["node_modules/@types"],
     "noImplicitAny": true,
-    "declaration": true,
-    "paths": {
-      "@lancejpollard/configured-quadratic-residue-prng.js": ["dependencies.d.ts"]
-    }
+    "declaration": true
   },
   "include": ["*.ts", "**/*.ts", "*.d.ts"],
   "exclude": ["node_modules", "host"]
