--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@wavebond/tone-code",
+  "name": "@textsurf/tone-code",
   "type": "module",
   "version": "0.3.1",
   "license": "MIT",
