--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@termsurf/tone-code",
+  "name": "@cluesurf/tone-code",
   "type": "module",
-  "version": "0.4.0",
+  "version": "0.4.2",
   "license": "MIT",
   "main": "./host/index.js",
   "files": [
